--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ authors = ["terry.an.bj@gmail.com"]
 clap = { version = "4.4.16", features = ["derive"] }
 env_logger = "0.10.1"
 log = "0.4.20"
+tokio = { version = "1.35.1", features = ["full"] }
