--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "ahome_mesh"
+name = "ahmesh"
 version = "0.1.0"
 edition = "2021"
 authors = ["terry.an.bj@gmail.com"]
@@ -9,5 +9,6 @@ authors = ["terry.an.bj@gmail.com"]
 [dependencies]
 clap = { version = "4.4.16", features = ["derive"] }
 env_logger = "0.10.1"
+libc = "0.2.152"
 log = "0.4.20"
 tokio = { version = "1.35.1", features = ["full"] }
