--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,4 +11,10 @@ clap = { version = "4.4.16", features = ["derive"] }
 env_logger = "0.10.1"
 libc = "0.2.152"
 log = "0.4.20"
+prost = "0.12.3"
 tokio = { version = "1.35.1", features = ["full"] }
+tokio-stream = "0.1.14"
+tonic = "0.10.2"
+
+[build-dependencies]
+tonic-build = "0.10.2"
