--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ authors = ["terry.an.bj@gmail.com"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+async-trait = "0.1.77"
 clap = { version = "4.4.16", features = ["derive"] }
 env_logger = "0.10.1"
 libc = "0.2.152"
